<resources>
    <string name="app_name">Comic Book Stores</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_review">Add Review</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="here">Here</string>
    <string name="unexpected_error">Unexpected Error</string>
    <string name="error_user_register">User Couldn\'t Be Registered</string>
    <string name="error_post_review">Review Couldn\'t Be Posted</string>
    <string name="error_loading_reviews">Reviews Couldn\'t Be Loaded</string>
    <string name="error_loading_store">Store Couldn\'t Be Loaded</string>
    <string name="permission_denied">Access to location not granted</string>
    <string name="error_empty_fields">Please fill all the fields</string>
    <string name="no_gps_signal">No GPS Signal</string>
    <string name="registered_successfully">registered successfully</string>
    <string name="review_posted_successfully">Review posted successfully</string>
    <string name="success">Success</string>
    <string name="logout">logout</string>
    <string name="login_successful">Login successful</string>
    <string name="error_login">Login failed</string>
    <string name="error_user_get">Error fetching user data</string>
    <string name="error_review_get">Error fetching review data</string>
    <string name="error_stores_get">Error fetching stores data</string>
    <string name="error">Error</string>
    <string name="gps_cannot_be_accessed">GPS cannot be accessed</string>
    <string name="unable_to_retrieve_location">Unable to retrieve location</string>
    <string name="location_permission_not_granted">Location permission not granted</string>
    <string name="failed_to_load_reviews">Failed to load reviews</string>
    <string name="error_user_update">User Couldn\'t Be Edited</string>
    <string name="error_review_update">Review Couldn\'t Be Edited</string>
    <string name="error_user_delete">User Couldn\'t Be Deleted</string>
    <string name="error_review_delete">Review Couldn\'t Be Deleted</string>
    <string name="edited_successfully"> edited successfully</string>
    <string name="review_edited_successfully">Review edited successfully</string>
    <string name="user_deleted_successfully">User deleted successfully</string>
    <string name="review_deleted_successfully">Review deleted successfully</string>
    <string name="edit_dialog">Edit </string>
    <string name="edit_dialog_review">Edit</string>
    <string name="submit_changes">Submit changes?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog">Delete </string>
    <string name="delete_dialog_review">Delete</string>
    <string name="submit_delete_user">Delete user?</string>
    <string name="submit_delete_review">Delete review?</string>
    <string name="post_review">Post Review</string>
    <string name="edit_review">Edit Review</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="post">Post</string>
    <string name="favorite">Favorite</string>
    <string name="hated">Hated</string>
    <string name="indifferent">Indifferent</string>
    <string name="set_as_favorite">" set as Favorite"</string>
    <string name="set_as_hated">" set as Hated"</string>
    <string name="error_modifying_the_store">Error modifying the store</string>
    <string name="set_as_indifferent">" set as indifferent"</string>
    <string name="configuration_changed">Configuration modified</string>
    <string name="store_configuration_couldn_t_be_modified">Configuration couldn\'t be modified</string>
    <string name="highlighted_stores">Highlighted Stores</string>
    <string name="see_hated">See Hated</string>
</resources>